name:                music-suite-design
version:             0.1.0.0
synopsis:            Personal project
description:         Please see README.md
homepage:            http://github.com/meditans/music-suite-design#readme
license:             AllRightsReserved
author:              Carlo Nucera
maintainer:          meditans@gmail.com
copyright:           2016 Carlo Nucera
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
                     , bookkeeper >= 0.2.0.0
                     , data-default-class
                     , type-level-sets >= 0.7
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/meditans/music-suite-design
